# swagit

./: .eslintrc  .gitignore  CLAUDE.md  Cargo.toml  README.md  license.md  package.json  pnpm-lock.yaml
.cargo/: config.toml
.changeset/: config.json  fair-waves-drum.md  four-kings-confess.md  long-rats-melt.md  lucky-berries-listen.md  ninety-horses-clap.md  unlucky-fishes-rest.md
.github/workflows/: build.yml  publish.yml  release.yml  test.yml  version.js
lib/: check-node-version.js  check-update.js  git.js  handle-esc.js  message-prefix.js
npm/@swagit/linux-arm64/: package.json
npm/@swagit/linux-x64/: package.json
src/: git.rs  handlers.rs  main.rs
tests/: git_tests.rs  integration_tests.rs
