[package]
name = "swagit"
version = "0.1.6"
edition = "2021"
description = "A swag tool to use git with interactive cli"
authors = ["Evan Ye <jigsaw.ye@gmail.com>"]
license = "MIT"

[[bin]]
name = "swagit"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
colored = "2.0"
atty = "0.2"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
