[package]
name = "swagit"
version = "1.0.4"
edition = "2021"
description = "A swag tool to use git with interactive cli"
authors = ["Evan Ye <jigsaw.ye@gmail.com>"]
license = "MIT"
repository = "https://github.com/jigsawye/swagit"

[[bin]]
name = "swagit"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
colored = "2.0"
atty = "0.2"
ctrlc = "3.4"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
